# FsWriteWatcher

./: .gitignore  LICENSE  README.md  build_native_py_binding.sh  fa_notify.c  fa_notify.pyx  fs_watcher.py  fs_watcher.service  native_bind.pyx  notify_fs.c  notify_fs.py  pyproject.toml  requirements.txt  setup.py
native/: fa_notify-bind.pyx  fa_notify.c
src/mirfatif/fs_watcher/: fs_watcher.py
src/mirfatif/fs_watcher/etc/systemd/system/: fs_watcher.service
